# quadrocopter-deep-q-learning-tensorflow

./: .gitignore  CMakeLists.txt  README.md  build-cocos2d-x-libs-for-cmake.txt  commit.sh  how_to_run.txt  install-cuda-1.bash  install-cuda-2.bash  install-cuda-3.bash  install-cuda-4.bash  install-cuda-5.bash  install-cuda-6.bash  install-cuda-7.bash  install-cuda.bash  install-post-sudo.bash  install-pre-sudo.bash  install-simulator.bash  install-tf.bash  install-visualizer.bash  install.bash  run_on_macos.bash  set-env.bash
Quadrocopter-Box2D/Quadrocopter-Box2D/Quadrocopter-Box2D/: CMakeLists.txt  Obstacle1D.cpp  Obstacle1D.hpp  Obstacle2D.cpp  Obstacle2D.hpp  ObstacleModelIFace.cpp  ObstacleModelIFace.hpp  Quadrocopter1D.cpp  Quadrocopter1D.hpp  Quadrocopter2D.cpp  Quadrocopter2D.hpp  QuadrocopterModelIFace.cpp  QuadrocopterModelIFace.hpp  Simulation.cpp  Simulation.hpp  World.cpp  World.hpp  WorldBase.cpp  WorldBase.hpp  WorldObjectInfo.cpp  WorldObjectInfo.hpp  main.cpp
Quadrocopter-Box2D/Quadrocopter-Box2D/Quadrocopter-Box2D.xcodeproj/: project.pbxproj
Quadrocopter-Box2D/Quadrocopter-Box2D/Quadrocopter-Box2D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Quadrocopter-Visualizer/: .gitignore  CMakeLists.txt
Quadrocopter-Visualizer/Classes/: AppDelegate.cpp  CMakeLists.txt  ConsumerProducerSyncronizer.cpp  ConsumerProducerSyncronizer.hpp  HelloWorldScene.cpp  HelloWorldScene.h  Lib.cpp  Lib.h  ObstacleDiscrete1D.cpp  ObstacleDiscrete1D.hpp  ObstacleDiscrete2D.cpp  ObstacleDiscrete2D.hpp  PID.cpp  PID.hpp  Quadrocopter2DContActionCtrl.cpp  Quadrocopter2DContActionCtrl.hpp  Quadrocopter2DContActionLSTMCtrl.cpp  Quadrocopter2DContActionLSTMCtrl.hpp  Quadrocopter2DContActionLSTMWeakCtrl.cpp  Quadrocopter2DContActionLSTMWeakCtrl.hpp  Quadrocopter2DContActionMLPSeqCtrl.cpp  Quadrocopter2DContActionMLPSeqCtrl.hpp  Quadrocopter2DContActionPIDCtrl.cpp  Quadrocopter2DContActionPIDCtrl.hpp  Quadrocopter2DContActionPIDLSTMCtrl.cpp  Quadrocopter2DContActionPIDLSTMCtrl.hpp  Quadrocopter2DCtrl.cpp  Quadrocopter2DCtrl.hpp  QuadrocopterContActionCtrl.cpp  QuadrocopterContActionCtrl.hpp  QuadrocopterCtrl.cpp  QuadrocopterCtrl.hpp  QuadrocopterDiscrete1D.cpp  QuadrocopterDiscrete1D.hpp  QuadrocopterDiscrete2D.cpp  QuadrocopterDiscrete2D.hpp  QuadrocopterDiscrete2DCtrl.cpp  QuadrocopterDiscrete2DCtrl.hpp  QuadrocopterDiscreteCtrl.cpp  QuadrocopterDiscreteCtrl.hpp  (+12 more)
Quadrocopter-Visualizer/Classes/visualizer/: CMakeLists.txt
Quadrocopter-Visualizer/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
Quadrocopter-Visualizer/proj.android-studio/: settings.gradle
Quadrocopter-Visualizer/proj.android-studio/app/: AndroidManifest.xml  build.gradle
Quadrocopter-Visualizer/proj.android/res/values/: strings.xml
Quadrocopter-Visualizer/proj.ios_mac/Quadrocopter-Simulator/: main.cpp
Quadrocopter-Visualizer/proj.ios_mac/Quadrocopter-Visualizer.xcodeproj/: project.pbxproj
Quadrocopter-Visualizer/proj.ios_mac/ios/: Info.plist
Quadrocopter-Visualizer/proj.ios_mac/mac/: Info.plist
Quadrocopter-Visualizer/proj.win10/: Quadrocopter-Visualizer.sln
Quadrocopter-Visualizer/proj.win10/App/: Package.appxmanifest  Quadrocopter-Visualizer.vcxproj  Quadrocopter-Visualizer.vcxproj.filters
Quadrocopter-Visualizer/proj.win32/: Quadrocopter-Visualizer.sln
Quadrocopter-Visualizer/proj.win8.1-universal/: Quadrocopter-Visualizer.sln
Quadrocopter-Visualizer/proj.win8.1-universal/App.Shared/: Quadrocopter-Visualizer.Shared.vcxitems
Quadrocopter-Visualizer/proj.win8.1-universal/App.Windows/: Package.appxmanifest  Quadrocopter-Visualizer.Windows.vcxproj  Quadrocopter-Visualizer.Windows.vcxproj.filters
Quadrocopter-Visualizer/proj.win8.1-universal/App.WindowsPhone/: Package.appxmanifest  Quadrocopter-Visualizer.WindowsPhone.vcxproj
Quadrocopter2DBrain/Quadrocopter2DBrain/: ApiDiscreteDeepQ.cpp  ApiDiscreteDeepQ.hpp  BrainAlgorithm.cpp  BrainAlgorithm.hpp  BrainContinousDeepQ.cpp  BrainContinousDeepQ.hpp  BrainDiscreteDeepQ.cpp  BrainDiscreteDeepQ.hpp  CMakeLists.txt  DDPG.cpp  DDPG.hpp  DDPG_LSTM.cpp  DDPG_LSTM.hpp  DDPG_LSTM_Weak.cpp  DDPG_LSTM_Weak.hpp  ExpLambdaFilter.cpp  ExpLambdaFilter.hpp  ExperienceBank.cpp  ExperienceBank.hpp  ExperienceBankRemovable.cpp  ExperienceBankRemovable.hpp  ExperienceFilter.cpp  ExperienceFilter.hpp  ExperienceItem.cpp  ExperienceItem.hpp  Info.plist  Lib.cpp  Lib.hpp  Main.cpp  Main.h  Observation.cpp  Observation.hpp  ObservationSeqLimited.cpp  ObservationSeqLimited.hpp  Quadrocopter2DBrain.cpp  Quadrocopter2DBrain.hpp  QuadrocopterBrain.cpp  QuadrocopterBrain.hpp  Tensors.cpp  Tensors.hpp
Quadrocopter2DBrain/Quadrocopter2DBrain.xcodeproj/: project.pbxproj
Quadrocopter2DBrain/Quadrocopter2DBrain.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TensorflowGraph/: animation.py  create_graph_1d.py  create_graph_1d_ddpg.py  create_graph_2d.py  create_graph_2d_ddpg.py  create_graph_2d_ddpg_lstm_mlp.py  create_graph_2d_ddpg_lstm_mlp_weak.py  create_graph_2d_ddpg_lstm_stepped_mlp.py  create_graph_2d_ddpg_mlp_seq.py  create_graph_separated_1d.py  create_graph_separated_2d.py  main.py  self-organizing-map.py  som-test.py  test.py
TensorflowGraph/models/: graph-1d-ddpg.pb  graph-2d-ddpg-lstm-mlp-weak.pb  graph-2d-ddpg-lstm-mlp.pb  graph-2d-ddpg-lstm-stepped-mlp.pb  graph-2d-ddpg-mlp-seq.pb  graph-2d-ddpg.pb  graph-separated-1d.pb  graph.pb  graph2d.pb
TensorflowGraph/self_organizing_map/: __init__.py  self_organizing_map.py
TensorflowGraph/states/: .gitignore  graph-state  graph-state-0  graph-state-1000  graph-state-2000  graph-state-3000
TensorflowGraph/tf_rl/: conv_model.py  lstm_mlp_model.py  lstm_model.py  lstm_multi_model.py  models.py  simulate.py
TensorflowGraph/tf_rl/controller/: __init__.py  continnous_deepq_lstm.py  continnous_deepq_lstm_stepped.py  continnous_deepq_lstm_weak.py  continuous_deepq.py  discrete_deepq.py
TensorflowGraph/tf_rl/utils/: __init__.py
scripts/: protoc-recursively.bash
